--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
         <!-- header containing conway's game of life and website title -->
         <div id="canvas_container">
-            <canvas id="conway"></canvas>
+            <canvas id="conway" width="100%" height="5em"></canvas>
             <p id="title"><b>Paul Joseph Scott IV</b></p>
 
             <!-- logo for mobile only -->
-            <img id="mobile_logo" src="img/icons/mobile_logo.svg">
+            <img id="mobile_logo" src="img/icons/mobile_logo.svg" alt="Website Logo">
         </div>
 
         <!-- header containing links to other pages -->
@@ -47,28 +47,28 @@
                 <!-- link to about page -->
                 <div class="image_container">
                     <a href="index.html">
-                        <img src="img/icons/icon_about.svg">
+                        <img src="img/icons/icon_about.svg" alt="About">
                     </a>
                 </div>
 
                 <!-- link to projects page -->
                 <div class="image_container">
                     <a href="projects.html">
-                        <img src="img/icons/icon_projects.svg">
+                        <img src="img/icons/icon_projects.svg" alt="Projects">
                     </a>
                 </div>
 
                 <!-- link to resume [External: Google Drive] -->
                 <div class="image_container">
                     <a href="https://drive.google.com/open?id=1Z79TNs30ttAftoWwJbqm93X77OljiM3L" target="_blank">
-                        <img src="img/icons/icon_resume.svg">
+                        <img src="img/icons/icon_resume.svg" alt="Resume">
                     </a>
                 </div>
 
                 <!-- link to linkedin [External: LinkedIn] -->
                 <div class="image_container">
                     <a href="https://www.linkedin.com/in/paul-scott-047858140/" target="_blank">
-                        <img src="img/icons/icon_linkedin.svg">
+                        <img src="img/icons/icon_linkedin.svg" alt="LinkedIn">
                     </a>
                 </div>
             </div>
@@ -81,7 +81,7 @@
             <p class="section_title"> Education: <br><br></p>
             <div class="row">
                 <div class="content_div">
-                    <img src="img/edu_icons/psu.png">
+                    <img src="img/edu_icons/psu.png" alt="PSU Logo">
                     <p>
                         <b> Penn State </b><br>
                         Sophomore <br>
@@ -91,47 +91,16 @@
                     </p>
                 </div>
                 <div class="content_div">
-                    <img src="img/edu_icons/shc.png">
+                    <img src="img/edu_icons/shc.png" alt="Schreyer Logo">
                     <p><b> Schreyer Scholar </b><br> Gateway Program <br> Fall 2018</p>
                 </div>
                 <div class="content_div">
-                    <img src="img/edu_icons/whs.png">
+                    <img src="img/edu_icons/whs.png" alt="Wissahickon Logo">
                     <p><b> Wissahickon High School </b><br>
                         Graduated 2017 <br>
-                        7 AP Classes <br>
+                        Magna Cum Laude <br>
                         GPA 3.8/4.0
                     </p>
-                </div>
-            </div>
-
-            <!-- programming languages -->
-            <p class="section_title"> Programming Languages: <br><br></p>
-            <div class="row">
-                <div class="content_div" style="background: linear-gradient(to right, #ffe5af, #ffab00)">
-                    <img src="img/prg_icons/java.png" style="float: left">
-                    <p style="font-size: 36px">Java</p>
-                </div>
-                <div class="content_div" style="background: linear-gradient(to right, #c9a4ff, #8532ff)">
-                    <img src="img/prg_icons/kotlin.png" style="float: left">
-                    <p style="font-size: 36px">Kotlin</p>
-                </div>
-                <div class="content_div" style="background: linear-gradient(to right, #93e8ff, #14aad1)">
-                    <img src="img/prg_icons/python.png" style="float: left">
-                    <p style="font-size: 36px">Python</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="content_div" style="background: linear-gradient(to right, #fffd93, #efeb17)">
-                    <img src="img/prg_icons/javascript.png" style="float: left">
-                    <p style="font-size: 36px">JavaScript</p>
-                </div>
-                <div class="content_div" style="background: linear-gradient(to right, #7caeff, #0e5ad6)">
-                    <img src="img/prg_icons/c.png" style="float: left">
-                    <p style="font-size: 36px">C / C++</p>
-                </div>
-                <div class="content_div" style="background: linear-gradient(to right, #ffab72, #e2630d)">
-                    <img src="img/prg_icons/html.png" style="float: left">
-                    <p style="font-size: 36px">HTML / CSS</p>
                 </div>
             </div>
 
@@ -139,41 +108,78 @@
             <p class="section_title"> Experience: <br><br></p>
             <div class="row">
                 <div class="content_div">
-                    <img src="img/exp_icons/lunar.jpg">
-                    <p><b> Lunar Lion </b><br> <i>Ground Control Lead</i> <br> Aug 2018-Present </p>
+                    <img src="img/exp_icons/lockheed.png" alt="Lockheed Martin Logo">
+                    <p><b> Lockheed Martin </b><br> <i>Software Engineer Intern</i> <br> Summer 2019 </p>
                 </div>
                 <div class="content_div">
-                    <img src="img/exp_icons/easton.jpg">
+                    <img src="img/exp_icons/lunar.jpg" alt="Lunar Lion Logo">
+                    <p><b> Lunar Lion </b><br> <i>Ground Control Lead</i> <br> Aug 2018-Present </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="content_div">
+                    <img src="img/exp_icons/easton.jpg" alt="Easton Coach Logo">
                     <p><b> Easton Coach Company </b><br> <i>Software Engineer</i> <br> Summer 2018 </p>
                 </div>
                 <div class="content_div">
-                    <img src="img/exp_icons/wvpl.png">
+                    <img src="img/exp_icons/wvpl.png" alt="WVPL Logo">
                     <p><b> Wissahickon Valley Public Library</b><br> <i>IT Volunteer</i> <br> Summer 2016 </p>
                 </div>
             </div>
 
+            <!-- programming languages -->
+            <p class="section_title"> Programming Languages: <br><br></p>
+            <div class="row">
+                <div class="content_div" style="background: linear-gradient(to right, #ffe5af, #ffab00)">
+                    <img src="img/prg_icons/java.png" style="float: left" alt="Java Logo">
+                    <p style="font-size: 36px">Java</p>
+                </div>
+                <div class="content_div" style="background: linear-gradient(to right, #7caeff, #0e5ad6)">
+                    <img src="img/prg_icons/c.png" style="float: left" alt="C Logo">
+                    <p style="font-size: 36px">C / C++</p>
+                </div>
+                <div class="content_div" style="background: linear-gradient(to right, #fffd93, #efeb17)">
+                    <img src="img/prg_icons/javascript.png" style="float: left" alt="JavaScript Logo">
+                    <p style="font-size: 36px">JavaScript</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="content_div" style="background: linear-gradient(to right, #93e8ff, #14aad1)">
+                    <img src="img/prg_icons/python.png" style="float: left" alt="Python Logo">
+                    <p style="font-size: 36px">Python</p>
+                </div>
+                <div class="content_div" style="background: linear-gradient(to right, #c9a4ff, #8532ff)">
+                    <img src="img/prg_icons/kotlin.png" style="float: left" alt="Kotlin Logo">
+                    <p style="font-size: 36px">Kotlin</p>
+                </div>
+                <div class="content_div" style="background: linear-gradient(to right, #ffab72, #e2630d)">
+                    <img src="img/prg_icons/html.png" style="float: left" alt="HTML Logo">
+                    <p style="font-size: 36px">HTML / CSS</p>
+                </div>
+            </div>
+
             <!-- relevant skills -->
-            <p class="section_title"> Relevant Skills: <br><br></p>
+            <p class="section_title"> Coursework: <br><br></p>
             <div class="row">
                 <div class="content_div">
-                    <p> Systems Programming </p>
+                    <p> <i>CMPSC 465</i> - Data Structures & Algorithms</p>
                 </div>
                 <div class="content_div">
-                    <p> Object Oriented Programming</p>
+                    <p> <i>CMPSC 311</i> - Systems Programming </p>
                 </div>
                 <div class="content_div">
-                    <p> Multivariable Calculus </p>
+                    <p> <i>CMPSC 221</i> - Object Oriented Programming </p>
                 </div>
             </div>
             <div class="row">
                 <div class="content_div">
-                    <p> Physics: Mechanics </p>
+                    <p> <i>CMPEN 331</i> - Computer Design </p>
                 </div>
                 <div class="content_div">
-                    <p> Physics: Electricity & Magnetism </p>
+                    <p> <i>PHYS 212</i> - Physics: Electricity & Magnetism </p>
                 </div>
                 <div class="content_div">
-                    <p> Digital Systems </p>
+                    <p> <i>MATH 230</i> - Multivariable Calculus </p>
                 </div>
             </div>
 
@@ -181,11 +187,11 @@
             <p class="section_title"> Clubs: <br><br></p>
             <div class="row">
                 <div class="content_div">
-                    <img src="img/exp_icons/lunar.jpg">
+                    <img src="img/exp_icons/lunar.jpg" alt="Lunar Lion Logo">
                     <p> <b>Lunar Lion</b> <br> Aug 2017-Present </p>
                 </div>
                 <div class="content_div">
-                    <img src="img/exp_icons/acm.jpg">
+                    <img src="img/exp_icons/acm.jpg" alt="ACM Logo">
                     <p> <b>ACM</b> <br> Sep 2018-Present </p>
                 </div>
             </div>
@@ -194,16 +200,12 @@
             <p class="section_title"> Hackathons: <br><br></p>
             <div class="row">
                 <div class="content_div">
-                    <img src="img/hack_icons/icpc.png">
+                    <img src="img/hack_icons/icpc.png" alt="ICPC Logo">
                     <p> <b>ICPC</b> <br> Fall 2018</p>
                 </div>
                 <div class="content_div">
-                    <img src="img/hack_icons/hackpsu.png">
-                    <p> <b>HackPSU</b> <br> Fall 2018</p>
-                </div>
-                <div class="content_div">
-                    <img src="img/hack_icons/hackpsu.png">
-                    <p> <b>HackPSU</b> <br> Spring 2018</p>
+                    <img src="img/hack_icons/hackpsu.png" alt="HackPSU Logo">
+                    <p> <b>HackPSU</b> <br> Spring 2018 / Fall 2018</p>
                 </div>
             </div>
 
@@ -211,43 +213,43 @@
             <p class="section_title"> Hobbies + Interests: <br><br></p>
             <div class="row">
                 <div class="content_div">
-                    <img src="img/hob_icons/guitar.svg" style="float: left">
+                    <img src="img/hob_icons/guitar.svg" style="float: left" alt="Guitar">
                     <p style="font-size: 36px">Guitar</p>
                 </div>
                 <div class="content_div">
-                    <img src="img/hob_icons/bass.svg" style="float: left">
+                    <img src="img/hob_icons/bass.svg" style="float: left" alt="Bass">
                     <p style="font-size: 36px">Bass</p>
                 </div>
                 <div class="content_div">
-                    <img src="img/hob_icons/piano.svg" style="float: left">
+                    <img src="img/hob_icons/piano.svg" style="float: left" alt="Piano">
                     <p style="font-size: 36px">Piano</p>
                 </div>
             </div>
             <div class="row">
                 <div class="content_div">
-                    <img src="img/hob_icons/ukulele.svg" style="float: left">
+                    <img src="img/hob_icons/ukulele.svg" style="float: left" alt="Ukulele">
                     <p style="font-size: 36px">Ukulele</p>
                 </div>
                 <div class="content_div">
-                    <img src="img/hob_icons/vinyl.svg" style="float: left">
+                    <img src="img/hob_icons/vinyl.svg" style="float: left" alt="Vinyl">
                     <p style="font-size: 36px">Vinyls</p>
                 </div>
                 <div class="content_div">
-                    <img src="img/hob_icons/mac.svg" style="float: left">
+                    <img src="img/hob_icons/mac.svg" style="float: left" alt="Macintosh">
                     <p style="font-size: 36px">Old Tech</p>
                 </div>
             </div>
             <div class="row">
                 <div class="content_div">
-                    <img src="img/hob_icons/plane.svg" style="float: left">
+                    <img src="img/hob_icons/plane.svg" style="float: left" alt="Plane">
                     <p style="font-size: 36px">Aviation</p>
                 </div>
                 <div class="content_div">
-                    <img src="img/hob_icons/coaster.svg" style="float: left">
+                    <img src="img/hob_icons/coaster.svg" style="float: left" alt="Roller Coaster">
                     <p style="font-size: 36px">Coasters</p>
                 </div>
                 <div class="content_div">
-                    <img src="img/hob_icons/coin.svg" style="float: left">
+                    <img src="img/hob_icons/coin.svg" style="float: left" alt="Coin">
                     <p style="font-size: 36px">Coins</p>
                 </div>
             </div>
