--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
             <p id="title"><b>Paul Joseph Scott IV</b></p>
 
             <!-- logo for mobile only -->
-            <img id="mobile_logo" src="img/icons/mobile_logo.svg">
+            <img id="mobile_logo" src="img/icons/mobile_logo.svg" alt="Website Logo">
         </div>
 
         <!-- header containing links to other pages -->
@@ -47,28 +47,28 @@
                 <!-- link to about page -->
                 <div class="image_container">
                     <a href="index.html">
-                        <img src="img/icons/icon_about.svg">
+                        <img src="img/icons/icon_about.svg" alt="About">
                     </a>
                 </div>
 
                 <!-- link to projects page -->
                 <div class="image_container">
                     <a href="projects.html">
-                        <img src="img/icons/icon_projects.svg">
+                        <img src="img/icons/icon_projects.svg" alt="Projects">
                     </a>
                 </div>
 
                 <!-- link to resume [External: Google Drive] -->
                 <div class="image_container">
                     <a href="https://drive.google.com/open?id=1Z79TNs30ttAftoWwJbqm93X77OljiM3L" target="_blank">
-                        <img src="img/icons/icon_resume.svg">
+                        <img src="img/icons/icon_resume.svg" alt="Resume">
                     </a>
                 </div>
 
                 <!-- link to linkedin [External: LinkedIn] -->
                 <div class="image_container">
                     <a href="https://www.linkedin.com/in/paul-scott-047858140/" target="_blank">
-                        <img src="img/icons/icon_linkedin.svg">
+                        <img src="img/icons/icon_linkedin.svg" alt="LinkedIn">
                     </a>
                 </div>
             </div>
