--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,8 @@
 
         <!-- link to css -->
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/desktop.css">
+        <link rel="stylesheet" href="css/mobile.css">
 
         <!-- google font link -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
