--- a/projects.html
+++ b/projects.html
@@ -91,6 +91,26 @@
                     </div>
                 </a>
 
+                <!-- siliconeight -->
+                <a class="project_div" href="https://pjs4.com/SiliconEight"
+                   target="_blank" style="background: url('img/projects/silicon.jpg');
+                   background-size: cover">
+                    <div class="project_text">
+                        <p> SiliconEight </p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="row">
+                <!-- paul's horrible drawings -->
+                <a class="project_div" href="https://pjs4.com/Pauls-Horrible-Drawings"
+                   target="_blank" style="background: url('img/projects/phd.jpg') center top;
+                       background-size: cover">
+                    <div class="project_text">
+                        <p> Paul's Horrible Drawings </p>
+                    </div>
+                </a>
+
                 <!-- pi cipher -->
                 <a class="project_div" href="https://pjs4.com/Pi-Cipher"
                    target="_blank" style="background: url('img/projects/picipher.jpg') center top;
@@ -100,6 +120,7 @@
                     </div>
                 </a>
             </div>
+
 
             <p class="section_title"> Other Projects: <br><br></p>
             <div class="row">
@@ -193,23 +214,23 @@
                     </div>
                 </a>
 
+                <!-- metar decoder -->
+                <a class="project_div" href="https://github.com/PScottZero/PythonPunchcard"
+                   target="_blank" style="background: url('img/projects/punchcard.jpg');
+                   background-size: cover">
+                    <div class="project_text">
+                        <p> Python Punchcard  </p>
+                    </div>
+                </a>
+            </div>
+            <div class="row">
+
                 <!-- recaman sequence visualizer -->
                 <a class="project_div" href="https://github.com/PScottZero/Recaman-Sequence-Visualizer"
                    target="_blank" style="background: url('img/projects/recaman.jpg');
                    background-size: cover">
                     <div class="project_text">
                         <p> Recam&aacuten Series Visualizer </p>
-                    </div>
-                </a>
-            </div>
-            <div class="row">
-
-                <!-- silicon eight -->
-                <a class="project_div" href="https://pjs4.com/SiliconEight"
-                   target="_blank" style="background: url('img/projects/silicon.jpg');
-                   background-size: cover">
-                    <div class="project_text">
-                        <p> SiliconEight </p>
                     </div>
                 </a>
 
