--- a/projects.html
+++ b/projects.html
@@ -87,7 +87,7 @@
                    target="_blank" style="background: url('img/projects/silicon_javascript.jpg') center;
                        background-size: cover">
                     <div class="project_text">
-                        <p> SiliconEight (Javascript) </p>
+                        <p> SiliconEight (Web) </p>
                     </div>
                 </a>
 
@@ -96,7 +96,27 @@
                    target="_blank" style="background: url('img/projects/silicon.jpg');
                    background-size: cover">
                     <div class="project_text">
-                        <p> SiliconEight </p>
+                        <p> SiliconEight (Kotlin) </p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="row">
+                <!-- convex hull web -->
+                <a class="project_div" href="https://pjs4.com/Convex-Hull-Web"
+                   target="_blank" style="background: url('img/projects/convex.jpg') center top;
+                       background-size: cover">
+                    <div class="project_text">
+                        <p> Convex Hull (Web) </p>
+                    </div>
+                </a>
+
+                <!-- convex hull kotlin -->
+                <a class="project_div" href="https://github.com/PScottZero/Convex-Hull"
+                   target="_blank" style="background: url('img/projects/convex_kotlin.jpg') center top;
+                       background-size: cover">
+                    <div class="project_text">
+                        <p> Convex Hull (Kotlin) </p>
                     </div>
                 </a>
             </div>
