--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@ About page for pjs4.com
   <!-- programming languages -->
   <p class="section_title"> Programming Languages: </p>
   <div class="row">
-    <div class="data_div" style="background: #e5a544">
+    <div class="data_div" style="background: #dda87a">
       <!-- image from https://icons8.com/ -->
       <img alt="Java Logo" src="img/prg_icons/java.svg" style="float: left">
       <p style="font-size: 36px">Java</p>
     </div>
-    <div class="data_div" style="background: #6371aa">
+    <div class="data_div" style="background: #7480b2">
       <!-- image from https://icons8.com/ -->
       <img alt="C Logo" src="img/prg_icons/c.svg" style="float: left">
       <p style="font-size: 36px">C Language</p>
@@ -166,12 +166,12 @@ About page for pjs4.com
       <img alt="JavaScript Logo" src="img/prg_icons/javascript.svg" style="float: left">
       <p style="font-size: 36px">JavaScript</p>
     </div>
-    <div class="data_div" style="background: #61afb5">
+    <div class="data_div" style="background: #82c4c9">
       <!-- image from https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg -->
       <img alt="Python Logo" src="img/prg_icons/python.svg" style="float: left">
       <p style="font-size: 36px">Python</p>
     </div>
-    <div class="data_div" style="background: #a882e0">
+    <div class="data_div" style="background: #b08ee2">
       <!-- image from https://upload.wikimedia.org/wikipedia/commons/7/74/Kotlin-logo.svg -->
       <img alt="Kotlin Logo" src="img/prg_icons/kotlin.svg" style="float: left">
       <p style="font-size: 36px">Kotlin</p>
