--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ About page for pjs4.com
     <!-- schreyer honors college -->
     <div class="data_div">
       <!-- image from https://www.facebook.com/PSUSHC -->
-      <img alt="Schreyer Logo" src="img/edu_icons/shc.png">
+      <img alt="Schreyer Logo" src="img/edu_icons/shc.jpg">
       <p><b> Schreyer Scholar </b><br> Gateway Program <br> Fall 2018</p>
     </div>
 
