--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
 Paul Scott
-3 February 2019
+11 February 2019
 
 About page for pjs4.com
 -->
@@ -98,7 +98,7 @@ About page for pjs4.com
     <!-- schreyer honors college -->
     <div class="data_div">
       <!-- image from https://www.facebook.com/PSUSHC -->
-      <img alt="Schreyer Logo" src="img/edu_icons/shc.jpg">
+      <img alt="Schreyer Logo" src="img/edu_icons/shc.png">
       <p><b> Schreyer Scholar </b><br> Gateway Program <br> Fall 2018</p>
     </div>
 
@@ -124,14 +124,14 @@ About page for pjs4.com
     </div>
     <div class="data_div">
       <!-- image from https://news.psu.edu/ -->
-      <img alt="Lunar Lion Logo" src="img/exp_icons/lunar.jpg">
+      <img alt="Lunar Lion Logo" src="img/exp_icons/lunar.png">
       <p><b> Lunar Lion </b><br> <i>Ground Control Lead</i> <br> Aug 2018-Present </p>
     </div>
   </div>
   <div class="row">
     <div class="data_div">
       <!-- image from https://www.ziprecruiter.com/ -->
-      <img alt="Easton Coach Logo" src="img/exp_icons/easton.jpg">
+      <img alt="Easton Coach Logo" src="img/exp_icons/easton.png">
       <p><b> Easton Coach Company </b><br> <i>Software Engineer</i> <br> Summer 2018 </p>
     </div>
     <div class="data_div">
@@ -144,162 +144,163 @@ About page for pjs4.com
   <!-- programming languages -->
   <p class="section_title"> Programming Languages: </p>
   <div class="row">
-    <div class="data_div" style="background: #dda87a">
+    <div class="data_div">
       <!-- image from https://icons8.com/ -->
-      <img alt="Java Logo" src="img/prg_icons/java.svg" style="float: left">
-      <p style="font-size: 36px">Java</p>
+      <img alt="Java" src="img/prg_icons/java.svg">
+      <p>Java</p>
     </div>
-    <div class="data_div" style="background: #7480b2">
+    <div class="data_div">
       <!-- image from https://icons8.com/ -->
-      <img alt="C Logo" src="img/prg_icons/c.svg" style="float: left">
-      <p style="font-size: 36px">C Language</p>
+      <img alt="C Language" src="img/prg_icons/c.svg">
+      <p>C Language</p>
     </div>
-    <div class="data_div" style="background: #30a1f2">
+    <div class="data_div">
       <!-- image from https://icons8.com/ -->
-      <img alt="C++ Logo" src="img/prg_icons/cpp.svg" style="float: left">
-      <p style="font-size: 36px">C++</p>
+      <img alt="C++" src="img/prg_icons/cpp.svg">
+      <p>C++</p>
     </div>
   </div>
   <div class="row">
-    <div class="data_div" style="background: #fffd93">
-      <!-- image from https://upload.wikimedia.org/wikipedia/commons/9/99/Unofficial_JavaScript_logo_2.svg -->
-      <img alt="JavaScript Logo" src="img/prg_icons/javascript.svg" style="float: left">
-      <p style="font-size: 36px">JavaScript</p>
-    </div>
-    <div class="data_div" style="background: #82c4c9">
-      <!-- image from https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg -->
-      <img alt="Python Logo" src="img/prg_icons/python.svg" style="float: left">
-      <p style="font-size: 36px">Python</p>
-    </div>
-    <div class="data_div" style="background: #b08ee2">
-      <!-- image from https://upload.wikimedia.org/wikipedia/commons/7/74/Kotlin-logo.svg -->
-      <img alt="Kotlin Logo" src="img/prg_icons/kotlin.svg" style="float: left">
-      <p style="font-size: 36px">Kotlin</p>
-    </div>
+    <div class="data_div"
+    ">
+    <!-- image from https://upload.wikimedia.org/wikipedia/commons/9/99/Unofficial_JavaScript_logo_2.svg -->
+    <img alt="JavaScript" src="img/prg_icons/javascript.svg">
+    <p>JavaScript</p>
   </div>
-  <div class="row">
-    <div class="data_div" style="background: #f28c32">
-      <!-- image from https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg -->
-      <img alt="HTML Logo" src="img/prg_icons/html.svg" style="float: left">
-      <p style="font-size: 36px">HTML / CSS</p>
-    </div>
-    <div class="data_div" style="background: #7caeff">
-      <!-- image from https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg -->
-      <img alt="MIPS Logo" src="img/prg_icons/mips.svg" style="float: left">
-      <p style="font-size: 36px">MIPS</p>
-    </div>
-    <div class="data_div" style="background: #dda87a">
-      <!-- image from https://upload.wikimedia.org/wikipedia/commons/7/74/Kotlin-logo.svg -->
-      <img alt="Verilog Logo" src="img/prg_icons/verilog.svg" style="float: left">
-      <p style="font-size: 36px">Verilog</p>
-    </div>
+  <div class="data_div">
+    <!-- image from https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg -->
+    <img alt="Python" src="img/prg_icons/python.svg">
+    <p>Python</p>
   </div>
+  <div class="data_div">
+    <!-- image from https://upload.wikimedia.org/wikipedia/commons/7/74/Kotlin-logo.svg -->
+    <img alt="Kotlin" src="img/prg_icons/kotlin.svg">
+    <p>Kotlin</p>
+  </div>
+</div>
+<div class="row">
+  <div class="data_div">
+    <!-- image from https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg -->
+    <img alt="HTML/CSS" src="img/prg_icons/html.svg">
+    <p>HTML/CSS</p>
+  </div>
+  <div class="data_div">
+    <!-- image from https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg -->
+    <img alt="MIPS" src="img/prg_icons/mips.svg">
+    <p>MIPS</p>
+  </div>
+  <div class="data_div">
+    <!-- image from https://upload.wikimedia.org/wikipedia/commons/7/74/Kotlin-logo.svg -->
+    <img alt="Verilog" src="img/prg_icons/verilog.svg">
+    <p>Verilog</p>
+  </div>
+</div>
 
-  <!-- relevant skills -->
-  <p class="section_title"> Coursework: </p>
-  <div class="row">
-    <div class="data_div">
-      <p><i>CMPSC 465</i> - Data Structures & Algorithms</p>
-    </div>
-    <div class="data_div">
-      <p><i>CMPSC 311</i> - Systems Programming </p>
-    </div>
-    <div class="data_div">
-      <p><i>CMPSC 221</i> - Object Oriented Programming </p>
-    </div>
+<!-- relevant skills -->
+<p class="section_title"> Coursework: </p>
+<div class="row">
+  <div class="data_div">
+    <p><i>CMPSC 465</i> - Data Structures & Algorithms</p>
   </div>
-  <div class="row">
-    <div class="data_div">
-      <p><i>CMPEN 331</i> - Computer Design </p>
-    </div>
-    <div class="data_div">
-      <p><i>PHYS 212</i> - Physics: Electricity & Magnetism </p>
-    </div>
-    <div class="data_div">
-      <p><i>MATH 230</i> - Multivariable Calculus </p>
-    </div>
+  <div class="data_div">
+    <p><i>CMPSC 311</i> - Systems Programming </p>
   </div>
+  <div class="data_div">
+    <p><i>CMPSC 221</i> - Object Oriented Programming </p>
+  </div>
+</div>
+<div class="row">
+  <div class="data_div">
+    <p><i>CMPEN 331</i> - Computer Design </p>
+  </div>
+  <div class="data_div">
+    <p><i>PHYS 212</i> - Physics: Electricity & Magnetism </p>
+  </div>
+  <div class="data_div">
+    <p><i>MATH 230</i> - Multivariable Calculus </p>
+  </div>
+</div>
 
-  <!-- clubs -->
-  <p class="section_title"> Clubs: </p>
-  <div class="row">
-    <div class="data_div">
-      <!-- image from https://news.psu.edu/ -->
-      <img alt="Lunar Lion Logo" src="img/exp_icons/lunar.jpg">
-      <p><b>Lunar Lion</b> <br> Aug 2017-Present </p>
-    </div>
-    <div class="data_div">
-      <!-- image from https://twitter.com/pennstateacm -->
-      <img alt="ACM Logo" src="img/exp_icons/acm.jpg">
-      <p><b>ACM</b> <br> Sep 2018-Present </p>
-    </div>
+<!-- clubs -->
+<p class="section_title"> Clubs: </p>
+<div class="row">
+  <div class="data_div">
+    <!-- image from https://news.psu.edu/ -->
+    <img alt="Lunar Lion Logo" src="img/exp_icons/lunar.png">
+    <p><b>Lunar Lion</b> <br> Aug 2017-Present </p>
   </div>
+  <div class="data_div">
+    <!-- image from https://twitter.com/pennstateacm -->
+    <img alt="ACM Logo" src="img/exp_icons/acm.png">
+    <p><b>ACM</b> <br> Sep 2018-Present </p>
+  </div>
+</div>
 
-  <!-- hackathons -->
-  <p class="section_title"> Hackathons: </p>
-  <div class="row">
-    <div class="data_div">
-      <!-- image from https://en.wikipedia.org/ -->
-      <img alt="ICPC Logo" src="img/hack_icons/icpc.png">
-      <p><b>ICPC</b> <br> Fall 2018</p>
-    </div>
-    <div class="data_div">
-      <!-- image from https://www.nittanyai.psu.edu/sites/default/files/hackpsulogo2016_1.png -->
-      <img alt="HackPSU Logo" src="img/hack_icons/hackpsu.png">
-      <p><b>HackPSU</b> <br> Spring 2018 / Fall 2018</p>
-    </div>
+<!-- hackathons -->
+<p class="section_title"> Hackathons: </p>
+<div class="row">
+  <div class="data_div">
+    <!-- image from https://en.wikipedia.org/ -->
+    <img alt="ICPC Logo" src="img/hack_icons/icpc.png">
+    <p><b>ICPC</b> <br> Fall 2018</p>
   </div>
+  <div class="data_div">
+    <!-- image from https://www.nittanyai.psu.edu/sites/default/files/hackpsulogo2016_1.png -->
+    <img alt="HackPSU Logo" src="img/hack_icons/hackpsu.png">
+    <p><b>HackPSU</b> <br> Spring 2018 / Fall 2018</p>
+  </div>
+</div>
 
-  <!-- hobbies -->
-  <p class="section_title"> Hobbies + Interests: </p>
-  <div class="row">
-    <div class="data_div">
-      <img alt="Guitar" src="img/hob_icons/guitar.svg" style="float: left">
-      <p style="font-size: 36px">Guitar</p>
-    </div>
-    <div class="data_div">
-      <img alt="Bass" src="img/hob_icons/bass.svg" style="float: left">
-      <p style="font-size: 36px">Bass</p>
-    </div>
-    <div class="data_div">
-      <img alt="Piano" src="img/hob_icons/piano.svg" style="float: left">
-      <p style="font-size: 36px">Piano</p>
-    </div>
+<!-- hobbies -->
+<p class="section_title"> Hobbies + Interests: </p>
+<div class="row">
+  <div class="data_div">
+    <img alt="Guitar" src="img/hob_icons/guitar.svg">
+    <p>Guitar</p>
   </div>
-  <div class="row">
-    <div class="data_div">
-      <img alt="Ukulele" src="img/hob_icons/ukulele.svg" style="float: left">
-      <p style="font-size: 36px">Ukulele</p>
-    </div>
-    <div class="data_div">
-      <img alt="Vinyl" src="img/hob_icons/vinyl.svg" style="float: left">
-      <p style="font-size: 36px">Vinyls</p>
-    </div>
-    <div class="data_div">
-      <img alt="Macintosh" src="img/hob_icons/mac.svg" style="float: left">
-      <p style="font-size: 36px">Old Tech</p>
-    </div>
+  <div class="data_div">
+    <img alt="Bass" src="img/hob_icons/bass.svg">
+    <p>Bass</p>
   </div>
-  <div class="row">
-    <div class="data_div">
-      <img alt="Plane" src="img/hob_icons/plane.svg" style="float: left">
-      <p style="font-size: 36px">Aviation</p>
-    </div>
-    <div class="data_div">
-      <img alt="Roller Coaster" src="img/hob_icons/coaster.svg" style="float: left">
-      <p style="font-size: 36px">Coasters</p>
-    </div>
-    <div class="data_div">
-      <img alt="Coin" src="img/hob_icons/coin.svg" style="float: left">
-      <p style="font-size: 36px">Coins</p>
-    </div>
+  <div class="data_div">
+    <img alt="Piano" src="img/hob_icons/piano.svg">
+    <p>Piano</p>
   </div>
+</div>
+<div class="row">
+  <div class="data_div">
+    <img alt="Ukulele" src="img/hob_icons/ukulele.svg">
+    <p>Ukulele</p>
+  </div>
+  <div class="data_div">
+    <img alt="Vinyl" src="img/hob_icons/vinyl.svg">
+    <p>Vinyls</p>
+  </div>
+  <div class="data_div">
+    <img alt="Old Tech" src="img/hob_icons/mac.svg">
+    <p>Old Tech</p>
+  </div>
+</div>
+<div class="row">
+  <div class="data_div">
+    <img alt="Aviation" src="img/hob_icons/plane.svg">
+    <p>Aviation</p>
+  </div>
+  <div class="data_div">
+    <img alt="Roller Coasters" src="img/hob_icons/coaster.svg">
+    <p>Coasters</p>
+  </div>
+  <div class="data_div">
+    <img alt="Coin Collecting" src="img/hob_icons/coin.svg">
+    <p>Coins</p>
+  </div>
+</div>
 </div>
 
 <!-- website footer -->
 <div id="footer">
   <p>Created by Paul Scott with HTML and CSS</p>
-  <p>Last Updated 3 February 2019</p>
+  <p>Last Updated 11 February 2019</p>
 </div>
 </body>
 </html>
