--- a/projects.html
+++ b/projects.html
@@ -112,17 +112,18 @@ Project page for pjs4.com
       </div>
     </a>
 
-    <!-- convex hull kotlin -->
-    <a class="project_div" href="https://github.com/PScottZero/Convex-Hull"
-       style="background: url('img/projects/convex_kotlin.jpg') center top;
+    <!-- tetrik -->
+    <a class="project_div" href="https://pjs4.com/TetriK"
+       style="background: url('img/projects/tetrik.jpg') center top;
                        background-size: cover" target="_blank">
       <div class="project_text">
-        <p> Convex Hull (Kotlin) </p>
+        <p> Tetrik </p>
       </div>
     </a>
   </div>
 
   <div class="row">
+
     <!-- paul's horrible drawings -->
     <a class="project_div" href="https://pjs4.com/Pauls-Horrible-Drawings"
        style="background: url('img/projects/phd.jpg') center top;
@@ -295,7 +296,7 @@ Project page for pjs4.com
 <!-- website footer -->
 <div id="footer">
   <p>Created by Paul Scott with HTML and CSS</p>
-  <p>Last Updated 11 February 2019</p>
+  <p>Last Updated 21 February 2019</p>
 </div>
 </body>
 </html>
