fixed tetrik project link

--- a/projects.html
+++ b/projects.html
@@ -113,7 +113,7 @@ Project page for pjs4.com
     </a>
 
     <!-- tetrik -->
-    <a class="project_div" href="https://pjs4.com/TetriK"
+    <a class="project_div" href="https://github.com/PScottZero/TetriK"
        style="background: url('img/projects/tetrik.jpg') center top;
                        background-size: cover" target="_blank">
       <div class="project_text">
