--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 <!--
 Paul Scott
-21 February 2019
+16 March 2019
 
 Project page for pjs4.com
 -->
@@ -31,12 +31,12 @@ Project page for pjs4.com
 <!-- body -->
 <body>
 
-<!-- header containing conway's game of life and website title -->
+<!-- header featuring website title -->
 <div id="title_container">
-  <p id="title"><b>Paul Joseph Scott IV</b></p>
-
-  <!-- logo for mobile only -->
-  <img alt="Website Logo" id="mobile_logo" src="img/icons/mobile_logo.svg">
+  <div id="centered_title">
+    <img id="profile" src="img/icons/profile.png" alt="Picture of Me :)">
+    <p id="title"><b>Paul Joseph Scott IV</b></p>
+  </div>
 </div>
 
 <!-- header containing links to other pages -->
@@ -296,7 +296,7 @@ Project page for pjs4.com
 <!-- website footer -->
 <div id="footer">
   <p>Created by Paul Scott with HTML and CSS</p>
-  <p>Last Updated 21 February 2019</p>
+  <p>Last Updated 16 March 2019</p>
 </div>
 </body>
 </html>
