--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
 Paul Scott
-16 March 2019
+24 March 2019
 
 About page for pjs4.com
 -->
@@ -241,13 +241,18 @@ About page for pjs4.com
   <div class="row">
     <div class="data_div">
       <!-- image from https://en.wikipedia.org/ -->
+      <img alt="CodePSU Logo" src="img/hack_icons/codepsu.png">
+      <p><b>CodePSU</b> <br> Spring 2019 </p>
+    </div>
+    <div class="data_div">
+      <!-- image from https://en.wikipedia.org/ -->
       <img alt="ICPC Logo" src="img/hack_icons/icpc.png">
-      <p><b>ICPC</b> <br> Fall 2018</p>
+      <p><b>ICPC</b> <br> Fall 2018 </p>
     </div>
     <div class="data_div">
       <!-- image from https://www.nittanyai.psu.edu/sites/default/files/hackpsulogo2016_1.png -->
       <img alt="HackPSU Logo" src="img/hack_icons/hackpsu.png">
-      <p><b>HackPSU</b> <br> Spring 2018 / Fall 2018</p>
+      <p><b>HackPSU</b> <br> Spring 2018 / Fall 2018 </p>
     </div>
   </div>
 
@@ -300,7 +305,7 @@ About page for pjs4.com
 <!-- website footer -->
 <div id="footer">
   <p>Created by Paul Scott with HTML and CSS</p>
-  <p>Last Updated 16 March 2019</p>
+  <p>Last Updated 24 March 2019</p>
 </div>
 </body>
 </html>
